@@ -576,6 +576,7 @@ EPSON Stylus CX-3200
 EPSON Stylus CX-5200
 EPSON CL-700
 EPSON CL-750
+EPSON CL-760	(Experimental)
 EPSON EM-900C
 EPSON EM-930C
 EPSON MC-2000
@@ -589,6 +590,7 @@ EPSON MJ-6000C
 EPSON MJ-8000C
 EPSON PM-700C
 EPSON PM-730C
+EPSON PM-740C	(Experimental)
 EPSON PM-750C
 EPSON PM-760C
 EPSON PM-770C
@@ -596,7 +598,9 @@ EPSON PM-780C
 EPSON PM-790PT
 EPSON PM-800C
 EPSON PM-850PT
+EPSON PM-870C	(Experimental)
 EPSON PM-880C
+EPSON PM-930C	(Experimental)
 EPSON PM-950C
 EPSON PM-970C	(Experimental)
 EPSON PM-2000C
@@ -604,6 +608,7 @@ EPSON PM-2200C
 EPSON PM-3000C
 EPSON PM-3300C
 EPSON PM-3500C
+EPSON PM-3700C	(Experimental)
 EPSON PM-4000PX
 EPSON PM-5000C
 EPSON PM-7000C
@@ -848,6 +853,7 @@ Epson Stylus CX3200            escp2-cx3200    EPSON Stylus CX-3200
 Epson Stylus CX5200            escp2-cx5200    EPSON Stylus CX-5200
 Epson CL-700                   escp2-cl700     EPSON CL-700
 Epson CL-750                   escp2-cl750     EPSON CL-750
+Epson CL-760                   escp2-cl760     EPSON CL-760
 Epson EM-900C                  escp2-em900c    EPSON EM-900C
 Epson EM-930C                  escp2-em930c    EPSON EM-930C
 Epson MC-2000                  escp2-mc2000    EPSON MC-2000
@@ -861,6 +867,7 @@ Epson MJ-6000C                 escp2-mj6000c   EPSON MJ-6000C
 Epson MJ-8000C                 escp2-mj8000c   EPSON MJ-8000C
 Epson PM-700C                  escp2-pm700c    EPSON PM-700C
 Epson PM-730C                  escp2-pm730c    EPSON PM-730C
+Epson PM-740C                  escp2-pm740c    EPSON PM-740C
 Epson PM-750C                  escp2-pm750c    EPSON PM-750C
 Epson PM-760C                  escp2-pm760c    EPSON PM-760C
 Epson PM-770C                  escp2-pm770c    EPSON PM-770C
@@ -868,7 +875,9 @@ Epson PM-780C                  escp2-pm780c    EPSON PM-780C
 Epson PM-790PT                 escp2-pm790pt   EPSON PM-790PT
 Epson PM-800C                  escp2-pm800c    EPSON PM-800C
 Epson PM-850PT                 escp2-pm850pt   EPSON PM-850PT
+Epson PM-870C                  escp2-pm870c    EPSON PM-870C
 Epson PM-880C                  escp2-pm880c    EPSON PM-880C
+Epson PM-930C                  escp2-pm930c    EPSON PM-930C
 Epson PM-950C                  escp2-pm950c    EPSON PM-950C
 Epson PM-970C                  escp2-pm970c    EPSON PM-970C
 Epson PM-2000C                 escp2-pm2000c   EPSON PM-2000C
@@ -876,6 +885,7 @@ Epson PM-2200C                 escp2-pm2200c   EPSON PM-2200C
 Epson PM-3000C                 escp2-pm3000c   EPSON PM-3000C
 Epson PM-3300C                 escp2-pm3300c   EPSON PM-3300C
 Epson PM-3500C                 escp2-pm3500c   EPSON PM-3500C
+Epson PM-3700C                 escp2-pm3700c   EPSON PM-3700C
 Epson PM-4000PX                escp2-pm4000px  EPSON PM-4000PX
 Epson PM-5000C                 escp2-pm5000c   EPSON PM-5000C
 Epson PM-7000C                 escp2-pm7000c   EPSON PM-7000C
